ctm-sf-homeloan-app/main/default/objects/LoanApplicationExpense__c/LoanApplicationExpense__c.object-meta.xml
<CustomObject>
    <label>Loan Application Expense</label>
    <nameField>
        <label>Loan Application Expense Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Loan Application Expense</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>