ctm-sf-homeloan-app/main/default/objects/LoanApplicationExpense__c/fields/AnnualAmount__c.field-meta.xml
<CustomField>
    <fullName>AnnualAmount__c</fullName>
    <label>Annual Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>