ctm-sf-homeloan-app/main/default/objects/LoanApplicationExpense__c/fields/ExpenseDebtType__c.field-meta.xml
<CustomField>
    <fullName>ExpenseDebtType__c</fullName>
    <label>Expense Debt Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ExpenseDebtTypes</valueSetName>
    </valueSet>
</CustomField>