ctm-sf-homeloan-app/main/default/objects/LoanApplicationExpense__c/fields/ExpenseLivingType__c.field-meta.xml
<CustomField>
    <fullName>ExpenseLivingType__c</fullName>
    <label>Expense Living Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ExpenseLivingTypes</valueSetName>
    </valueSet>
</CustomField>