ctm-sf-homeloan-app/main/default/objects/LoanApplicationExpense__c/fields/ExpenseType__c.field-meta.xml
<CustomField>
    <fullName>ExpenseType__c</fullName>
    <label>Expense Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ExpenseTypes</valueSetName>
    </valueSet>
</CustomField>