ctm-sf-homeloan-app/main/default/objects/LoanApplicationExpense__c/fields/InvestmentPropertyExpenseSubtype__c.field-meta.xml
<CustomField>
    <fullName>InvestmentPropertyExpenseSubtype__c</fullName>
    <label>Investment Property Expense Subtype</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ExpenseLivingPropertyDetailTypes</valueSetName>
    </valueSet>
</CustomField>