ctm-sf-homeloan-app/main/default/objects/LoanApplicationExpense__c/fields/LoanApplicationLiability__c.field-meta.xml
<CustomField>
    <fullName>LoanApplicationLiability__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Loan Application Liability</label>
    <referenceTo>LoanApplicationLiability__c</referenceTo>
    <relationshipLabel>Loan Application Expense</relationshipLabel>
    <relationshipName>Loan_Application_Expense</relationshipName>
    <type>Lookup</type>
</CustomField>