ctm-sf-homeloan-app/main/default/objects/LoanApplicationExpense__c/fields/MonthlyAmount__c.field-meta.xml
<CustomField>
    <fullName>MonthlyAmount__c</fullName>
    <label>Monthly Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>