ctm-sf-homeloan-app/main/default/objects/LoanApplicationExpense__c/fields/OutstandingAmount__c.field-meta.xml
<CustomField>
    <fullName>OutstandingAmount__c</fullName>
    <label>Outstanding Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>