ctm-sf-homeloan-app/main/default/objects/LoanApplicationExpense__c/fields/Refinance__c.field-meta.xml
<CustomField>
    <fullName>Refinance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Refinance</label>
    <type>Checkbox</type>
</CustomField>